--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/jennoborikawa/user-group#readme",
   "dependencies": {
+    "angular": "^1.5.8",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0"
   },
   "devDependencies": {
