--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "express": "^4.14.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-inject": "^4.1.0",
+    "gulp-watch": "^4.3.10",
     "nodemon": "^1.10.2"
   }
 }
