--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jennoborikawa/user-group#readme",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0"
   },
