--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test:dev": "DATABASE_URL=postgres://localhost/auth_db SYNC=true nodemon ./node_modules/mocha/bin/mocha",
     "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "start:dev": "DATABASE_URL=postgres://localhost/auth_db nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "pg": "^6.1.0",
